# crd-rs

./: Cargo.toml  README.md
.github/: release-drafter-barman-cloud.yml  release-drafter-cilium.yml  release-drafter-cnpg.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml  update-crds.yml
crates/barman-cloud/: Cargo.toml
crates/barman-cloud/src/: lib.rs  object_store.rs
crates/cilium/: Cargo.toml
crates/cilium/src/: bgp_advertisement.rs  bgp_cluster_config.rs  bgp_node_config.rs  bgp_node_config_override.rs  bgp_peer_config.rs  cidr_group.rs  clusterwide_envoy_config.rs  clusterwide_network_policy.rs  egress_gateway_policy.rs  endpoint.rs  endpoint_slice.rs  envoy_config.rs  gateway_class_config.rs  l2_announcement_policy.rs  lib.rs  load_balancer_ip_pool.rs  local_redirect_policy.rs  network_policy.rs  node.rs  node_config.rs  pod_ip_pool.rs
crates/cnpg/: Cargo.toml
crates/cnpg/src/: backup.rs  cluster.rs  cluster_image_catalog.rs  database.rs  failover_quorum.rs  image_catalog.rs  lib.rs  pooler.rs  publication.rs  scheduled_backup.rs  subscription.rs
scripts/: update-barman-cloud-crds.sh  update-cilium-crds.sh  update-crds.sh
