[workspace]
resolver = "2"
members = [
    "crates/cilium",
    "crates/cnpg",
]

[workspace.dependencies]
k8s-openapi = { version = "0.24" }
kube = { version = "0.99", default-features = false }
kube-core = { version = "0.99", default-features = false }
kube-derive = { version = "0.99" }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
