[workspace]
resolver = "2"
members = [
    "crates/barman-cloud",
    "crates/cilium",
    "crates/cnpg",
]

[workspace.dependencies]
k8s-openapi = { version = "0.27" }
kube = { version = "3.0", default-features = false }
kube-core = { version = "3.0", default-features = false }
kube-derive = { version = "3.0" }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
