[package]
name = "cnpg"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { workspace = true, features = ["schemars"] }
kube = { workspace = true, default-features = false, features = [] }
kube-core = { workspace = true, features = ["schema"] }
kube-derive.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
k8s-openapi = { workspace = true, features = ["latest", "schemars"] }
kube = { workspace = true, features = ["client", "rustls-tls"] }

[package.metadata.docs.rs]
features = ["k8s-openapi/latest"]
